Push avancée tool Mj
Arrêt à EVTNAME23 pour aujourd'hui

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -120,7 +120,7 @@
  
  glp_save_edit_events.EVTNAME13:0 "Grant Monarch Power to [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC13:0 "Decide how much Monarch Power to grant to [From.Owner.GetName]."
- glp_save_edit_events.EVTEVTMANAZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTMANAZZ1:0 "Nevermind"
  glp_save_edit_events.EVTMANAA01:0 "50/50/50 Monarch Power"
  glp_save_edit_events.EVTMANAA02:0 "100/100/100 Monarch Power"
  glp_save_edit_events.EVTMANAA03:0 "150/150/150 Monarch Power"
@@ -161,6 +161,7 @@
  glp_save_edit_events.EVTMILITARYREWARDA11:0 "100k Manpower"
  glp_save_edit_events.EVTMILITARYREWARDA12:0 "-10k Manpower"
  glp_save_edit_events.EVTMILITARYREWARDA13:0 "1 year of Manpower"
+ glp_save_edit_events.EVTMILITARYREWARDA13a:0 "-1 year of Manpower"
  glp_save_edit_events.EVTMILITARYREWARDA14:0 "Change military to Elven"
  glp_save_edit_events.EVTMILITARYREWARDA15:0 "Change military to Dwarven"
  glp_save_edit_events.EVTMILITARYREWARDA16:0 "Change military to Gnoll"
@@ -242,42 +243,58 @@
  glp_save_edit_events.EVTNAME18:0 "Received New General"
  glp_save_edit_events.EVTDESC18:0 "My [Root.Monarch.GetTitle]! The greatest council of the whole world - Infernal Troll Game Masters, sent one of his great generals to our [Root.GovernmentName]! He will lead our troops to the great victories!"
  glp_save_edit_events.EVTOPTA18:0 "Let our enemies tremble in fear!"
- glp_new_general_tt:0 "§YReceived new generals From the Overlord!§!"
- 
+ glp_new_general_tt:0 "§YReceived new generals From the Infernal Troll Game Masters!§!"
+
  glp_save_edit_events.EVTNAME19:0 "Spawn Admirals for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC19:0 "Decide what kind of Admirals to spawn for [From.Owner.GetName]."
- glp_save_edit_events.EVTOPTA19:0 "Nevermind"
- glp_save_edit_events.EVTOPTB19:0 "50 NT Admiral"
- glp_save_edit_events.EVTOPTC19:0 "100 NT Admiral"
- glp_save_edit_events.EVTOPTD19:0 "50 NT Explorer"
- glp_save_edit_events.EVTOPTE19:0 "100 NT Explorer"
- glp_save_edit_events.EVTOPTF19:0 "Jack Sparrow"
+ glp_save_edit_events.EVTAMIRALZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTAMIRALA01:0 "50 NT Admiral"
+ glp_save_edit_events.EVTAMIRALA02:0 "100 NT Admiral"
+ glp_save_edit_events.EVTAMIRALA03:0 "50 NT Explorer"
+ glp_save_edit_events.EVTAMIRALA04:0 "100 NT Explorer"
+#glp_save_edit_events.EVTOPTF19:0 "Jack Sparrow"
  glp_save_edit_events.EVTNAME20:0 "A New Admiral Arrived!"
- glp_save_edit_events.EVTDESC20:0 "My [Root.Monarch.GetTitle]! The greatest council of the whole world - The Vampiric Conclave, sent one of his great admirals to our [Root.GovernmentName]! He will lead our armadas to the great victories!"
+ glp_save_edit_events.EVTDESC20:0 "My [Root.Monarch.GetTitle]! The greatest council of the whole world - Infernal Troll Game Masters, sent one of his great admirals to our [Root.GovernmentName]! He will lead our armadas to the great victories!"
  glp_save_edit_events.EVTOPTA20:0 "Give this man a Boat."
+ glp_new_admiral_tt:0 "§YReceived new Advisors From the Infernal Troll Game Masters!§!"
  
- glp_new_admiral_tt:0 "§YReceived new Advisors From the Conclave!§!"
  glp_save_edit_events.EVTNAME21:0 "Spawn Advisors for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC21:0 "Decide what kind of Advisors to spawn for [From.Owner.GetName]."
- glp_save_edit_events.EVTOPTA21:0 "Nevermind"
- glp_save_edit_events.EVTOPTB21:0 "Mr. Miyagi"
- glp_save_edit_events.EVTOPTC21:0 "Jacek Soplica and Ksiadz Robak"
- glp_save_edit_events.EVTOPTD21:0 "Morgan Le Fay"
- glp_save_edit_events.EVTOPTE21:0 "Sir Galahad"
- glp_save_edit_events.EVTOPTF21:0 "Sir Gawain"
- glp_save_edit_events.EVTOPTG21:0 "Sir Percival"
+ glp_save_edit_events.EVTPANTHEONZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTPANTHEONA01:0 "Tyrus Cosmique Discipline tier 5"
+ glp_save_edit_events.EVTPANTHEONA02:0 "Daelin GrosBateau Moral Naval tier 5"
+ glp_save_edit_events.EVTPANTHEONA03:0 "Xeff Le Narcissique reinforce speed tier 5"
+ glp_save_edit_events.EVTPANTHEONA04:0 "Jika Le Laggeur Diplo Rep tier 5"
+ glp_save_edit_events.EVTPANTHEONA05:0 "Piem L'Avarissime Production eff tier 5"
+ glp_save_edit_events.EVTPANTHEONA06:0 "Yame LanguePendue Force Limit tier 5"
+ glp_save_edit_events.EVTPANTHEONA07:0 "Tyanos L'architecte all power cost tier 5"
+ glp_save_edit_events.EVTPANTHEONA08:0 "Piem Meminator Stability cost tier 5"
+ glp_save_edit_events.EVTPANTHEONA09:0 "Destroyer Le Propriétaire inflation tier 5"
+ glp_save_edit_events.EVTPANTHEONA10:0 "Marran III L'organisateur Missionary strenght tier 5"
+ glp_save_edit_events.EVTPANTHEONA11:0 "Darfish l'Absent land maintenance cost tier 5"
+ glp_save_edit_events.EVTPANTHEONA12:0 "Aza le marchand de sable Stability tier 5"
+ glp_save_edit_events.EVTPANTHEONA13:0 "Panzeweeb Interspecies Reviewer tarrifs tier 5"
+ glp_save_edit_events.EVTPANTHEONA14:0 "The Dev Brothers"
  glp_save_edit_events.EVTNAME22:0 "Received new advisor"
- glp_save_edit_events.EVTDESC22:0 "My [Root.Monarch.GetTitle]! The advisor we were promised by the official sent from the Vampiric Conclave has arrived in our [Root.GovernmentName]. Our nation will now eclipse all others in their glory!"
+ glp_save_edit_events.EVTDESC22:0 "My [Root.Monarch.GetTitle]! The advisor we were promised by the official sent from the Infernal Troll Game Masters has arrived in our [Root.GovernmentName]. Our nation will now eclipse all others in their glory!"
  glp_save_edit_events.EVTOPTA22:0 "Splendid!"
- glp_new_advisor_tt:0 "§YReceived new Advisors from The Vampiric Conclave!§!"
+ glp_new_advisor_tt:0 "§YReceived new Advisors from The Infernal Troll Game Masters!§!"
+ 
  glp_save_edit_events.EVTNAME23:0 "AI Nation fixes for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC23:0 "Decide what kind of nation fixes to do for [From.Owner.GetName]."
- glp_save_edit_events.EVTOPTA23:0 "Nevermind"
- glp_save_edit_events.EVTOPTB23:0 "Clear War Exhaustion"
- glp_save_edit_events.EVTOPTC23:0 "Clear Inflation"
- glp_save_edit_events.EVTOPTD23:0 "Clear Corruption"
- glp_save_edit_events.EVTOPTE23:0 "Remove AE opinion with players"
+ glp_save_edit_events.EVTFIXINGZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTFIXINGA01:0 "Clear War Exhaustion"
+ glp_save_edit_events.EVTFIXINGA02:0 "+5 War Exhaustion" 
+ glp_save_edit_events.EVTFIXINGA03:0 "Clear Inflation"
+ glp_save_edit_events.EVTFIXINGA04:0 "+5 Inflation"
+ glp_save_edit_events.EVTFIXINGA05:0 "+10 Inflation"
+ glp_save_edit_events.EVTFIXINGA06:0 "+100 Inflation"
+ glp_save_edit_events.EVTFIXINGA07:0 "Clear Corruption"
+ glp_save_edit_events.EVTFIXINGA08:0 "+5 Corruption"
+ glp_save_edit_events.EVTFIXINGA09:0 "+10 Corruption"
+ glp_save_edit_events.EVTFIXINGA10:0 "Remove AE opinion with players"
  glp_GM_nation_buffs:0 "GM Nation"
+ 
  glp_save_edit_events.EVTNAME24:0 "Change religion in the province of [From.GetName]"
  glp_save_edit_events.EVTDESC24:0 "Decide the religion of the province of [From.GetName]."
  glp_save_edit_events.EVTOPTZ24:0 "Nevermind"
