Scry and gouv reform for admin

--- a/3362815204/localisation/1me_text_l_english.yml
+++ b/3362815204/localisation/1me_text_l_english.yml
@@ -47,6 +47,10 @@ parliament_all_provinces_title:0 "£dip£ I love democracy !"
 parliament_all_provinces_desc:0 "Add parliment to every province"
 parliament_all_provinces_tooltip:0 "Add parliment to every province"
 
+scry_on_everyone_title:0 "Scry Everyone"
+scry_on_everyone_desc:0 "Sauron's eyes see all"
+scry_on_everyone_tooltip:0 "Lift Fog of war during 120 months"
+
 advisor_flags_info_title:0 "Advisor Events Status"
 advisor_flags_info_desc:0 "This option displays which advisor events have been triggered in your country."
  
