Delete in start menu admins

--- a/3362815204/localisation/anb_settings_l_english.yml
+++ b/3362815204/localisation/anb_settings_l_english.yml
@@ -57,6 +57,10 @@
  anb_settings.3.ox:0 "£settings_button_gozenguun_x£[Root.GetSettingsAlertGozenguun]"
  anb_settings.3.p:0 "£settings_button_insyaa££settings_alert_none£"
  anb_settings.3.px:0 "£settings_button_insyaa_x£[Root.GetSettingsAlertInsyaa]"
+ #######piemversalis###########
+ anb_settings.3.q:0 "delete admin"
+ anb_settings.3.qx:0 "restore admin"
+ ##############################
  anb_settings.3.x:0 "£settings_button_back_to_menu£"
  
  #custom loc
