Change province religion with admin

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -298,31 +298,39 @@
  glp_save_edit_events.EVTNAME24:0 "Change religion in the province of [From.GetName]"
  glp_save_edit_events.EVTDESC24:0 "Decide the religion of the province of [From.GetName]."
  glp_save_edit_events.EVTOPTZ24:0 "Nevermind"
- glp_save_edit_events.EVTOPTAA24:0 "Inquisition"
- glp_save_edit_events.EVTOPTA24:0 "Catholic"
- glp_save_edit_events.EVTOPTB24:0 "Anglican"
- glp_save_edit_events.EVTOPTC24:0 "Hussite"
- glp_save_edit_events.EVTOPTD24:0 "Protestant"
- glp_save_edit_events.EVTOPTE24:0 "Reformed"
- glp_save_edit_events.EVTOPTF24:0 "Orthodox"
- glp_save_edit_events.EVTOPTG24:0 "Coptic"
- glp_save_edit_events.EVTOPTH24:0 "Sunni"
- glp_save_edit_events.EVTOPTI24:0 "Shiite"
- glp_save_edit_events.EVTOPTJ24:0 "Ibadi"
- glp_save_edit_events.EVTOPTK24:0 "Theravada"
- glp_save_edit_events.EVTOPTL24:0 "Vajrayana"
- glp_save_edit_events.EVTOPTM24:0 "Mahayana"
- glp_save_edit_events.EVTOPTN24:0 "Confucianism"
- glp_save_edit_events.EVTOPTO24:0 "Shinto"
- glp_save_edit_events.EVTOPTP24:0 "Hinduism"
- glp_save_edit_events.EVTOPTQ24:0 "Sikhism"
- glp_save_edit_events.EVTOPTR24:0 "Animism"
- glp_save_edit_events.EVTOPTS24:0 "Fetishist"
- glp_save_edit_events.EVTOPTT24:0 "Totemism"
- glp_save_edit_events.EVTOPTU24:0 "Norse"
- glp_save_edit_events.EVTOPTW24:0 "Tengri"
- glp_save_edit_events.EVTOPTX24:0 "Jewish"
- glp_save_edit_events.EVTOPTY24:0 "Zoroastrian"
+ glp_save_edit_events.EVTOPTAA24:0 "Corinite"
+ glp_save_edit_events.EVTOPTA24:0 "Regent Court"
+ glp_save_edit_events.EVTOPTB24:0 "Dalcabba"
+ glp_save_edit_events.EVTOPTC24:0 "Infernal Court"
+ glp_save_edit_events.EVTOPTD24:0 "The Thought"
+ glp_save_edit_events.EVTOPTE24:0 "Black Doctrine"
+ glp_save_edit_events.EVTOPTF24:0 "Elikhetist"
+ glp_save_edit_events.EVTOPTG24:0 "Nirakhetist"
+ glp_save_edit_events.EVTOPTH24:0 "Aakhetist"
+ glp_save_edit_events.EVTOPTI24:0 "Xhazobkult"
+ glp_save_edit_events.EVTOPTJ24:0 "Ancestor Worship"
+ glp_save_edit_events.EVTOPTK24:0 "Dwarven Pantheon"
+ glp_save_edit_events.EVTOPTL24:0 "Runefather Worship"
+ glp_save_edit_events.EVTOPTM24:0 "Elven Forebears"
+ glp_save_edit_events.EVTOPTN24:0 "Soise Vio"
+ glp_save_edit_events.EVTOPTO24:0 "Nur Dahvaraesa"
+ glp_save_edit_events.EVTOPTP24:0 "Sun Cult"
+ glp_save_edit_events.EVTOPTQ24:0 "Old Sun Cult"
+ glp_save_edit_events.EVTOPTR24:0 "The Jadd"
+ glp_save_edit_events.EVTOPTS24:0 "Skaldhyrric Faith"
+ glp_save_edit_events.EVTOPTT24:0 "Great Dookan"
+ glp_save_edit_events.EVTOPTU24:0 "Old Dookan"
+ glp_save_edit_events.EVTOPTW24:0 "Kobold Dragon Cult"
+ glp_save_edit_events.EVTOPTX24:0 "Goblinic Shamanism"
+ glp_save_edit_events.EVTOPTY24:0 "The Hunt"
+ glp_save_edit_events.EVTOPTZ24:0 "Fey Court"
+ glp_save_edit_events.EVTOPTAB24:0 "Eordellon"
+ glp_save_edit_events.EVTOPTAC24:0 "High Philosophy"
+ glp_save_edit_events.EVTOPTAD24:0 "Suhans Praxis"
+ glp_save_edit_events.EVTOPTAE24:0 "Accretive Path"
+ glp_save_edit_events.EVTOPTAF24:0 "Transmutative Path"
+ glp_save_edit_events.EVTOPTAG24:0 "Mystic Accord"
+
  glp_save_edit_events.EVTNAME25:0 "Donation for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC25:0 "Decide how much treasury to donate to the nation of [From.Owner.GetName]."
  glp_save_edit_events.EVTOPTA25:0 "Nevermind"
