--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
  glp_save_edit_events.EVTNAME1:0 "Change [From.Owner.GetName]'s religion"
  glp_save_edit_events.EVTDESC1:0 "Decide a religion for the nation of [From.Owner.GetName]."
  glp_save_edit_events.EVTRELIGIONZZ1:0 "Nevermind"
@@ -40,17 +40,62 @@
  glp_save_edit_events.EVTOPTA2:0 "Interesting..."
  glp_religion_changed_tt:0 "§Y[Root.GetName]'s faith has been changed by the Infernal Troll Game Master's intervention!§!"
  
-# glp_save_edit_events.EVTNAME3:0 "Change [From.Owner.GetName]'s government"
-# glp_save_edit_events.EVTDESC3:0 "Choose the government type for [From.Owner.GetName]."
-# glp_save_edit_events.EVTOPTA3:0 "Nevermind"
-# glp_save_edit_events.EVTOPTB3:0 "Monarchy"
-# glp_save_edit_events.EVTOPTC3:0 "Republic"
-# glp_save_edit_events.EVTOPTD3:0 "Theocracy"
-# glp_save_edit_events.EVTOPTE3:0 "Tribal"
-# glp_save_edit_events.EVTNAME4:0 "Changed Government"
-# glp_save_edit_events.EVTDESC4:0 "My Lord! By the decree of the Vampiric Conclave, our nation just became a [Root.GovernmentName]! May the new ways of governing allow us to build a brighter future for us and our children!"
-# glp_save_edit_events.EVTOPTA4:0 "Let us embrace the new tomorrow!"
-# glp_government_flipped_tt:0 "§Y[Root.GetName]'s government type has been changed by the Vampiric Conclave intervention!§!"
+ glp_save_edit_events.EVTNAME3:0 "Adding minorities in the province of [From.GetName]"
+ glp_save_edit_events.EVTDESC3:0 "Choose what type of minorities you want to modify in [From.GetName]"
+ glp_save_edit_events.EVTMINORITIESZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTMINORITIESA01:0 "Add Elven Minority"
+ glp_save_edit_events.EVTMINORITIESA02:0 "Add Dwarven Minority"
+ glp_save_edit_events.EVTMINORITIESA03:0 "Add Gnoll Minority"
+ glp_save_edit_events.EVTMINORITIESA04:0 "Add Gnome Minority"
+ glp_save_edit_events.EVTMINORITIESA05:0 "Add Goblin Minority"
+ glp_save_edit_events.EVTMINORITIESA06:0 "Add Half-elven Minority"
+ glp_save_edit_events.EVTMINORITIESA07:0 "Add Half-orc Minority"
+ glp_save_edit_events.EVTMINORITIESA08:0 "Add Halfling Minority"
+ glp_save_edit_events.EVTMINORITIESA09:0 "Add Harpy Minority"
+ glp_save_edit_events.EVTMINORITIESA10:0 "Add Human Minority"
+ glp_save_edit_events.EVTMINORITIESA11:0 "Add Kobold Minority"
+ glp_save_edit_events.EVTMINORITIESA12:0 "Add Orc Minority"
+ glp_save_edit_events.EVTMINORITIESA13:0 "Add Ruinborn Minority"
+ glp_save_edit_events.EVTMINORITIESA14:0 "Add Troll Minority"
+ glp_save_edit_events.EVTMINORITIESA15:0 "Add Ogre Minority"
+ glp_save_edit_events.EVTMINORITIESA16:0 "Add Centaur Minority"
+ glp_save_edit_events.EVTMINORITIESA17:0 "Add Hobgoblin Minority"
+ glp_save_edit_events.EVTMINORITIESA18:0 "Add Harimari Minority"
+ glp_save_edit_events.EVTMINORITIESA19:0 "Add Lizardfolk Minority"
+ glp_save_edit_events.EVTMINORITIESA20:0 "Add Mechanim Minority"
+ glp_save_edit_events.EVTMINORITIESA21:0 "Remove Elven Minority"
+ glp_save_edit_events.EVTMINORITIESA22:0 "Remove Dwarven Minority"
+ glp_save_edit_events.EVTMINORITIESA23:0 "Remove Gnoll Minority"
+ glp_save_edit_events.EVTMINORITIESA24:0 "Remove Gnome Minority"
+ glp_save_edit_events.EVTMINORITIESA25:0 "Remove Goblin Minority"
+ glp_save_edit_events.EVTMINORITIESA26:0 "Remove Half-elven Minority"
+ glp_save_edit_events.EVTMINORITIESA27:0 "Remove Half-orc Minority"
+ glp_save_edit_events.EVTMINORITIESA28:0 "Remove Halfling Minority"
+ glp_save_edit_events.EVTMINORITIESA29:0 "Remove Harpy Minority"
+ glp_save_edit_events.EVTMINORITIESA30:0 "Remove Human Minority"
+ glp_save_edit_events.EVTMINORITIESA31:0 "Remove Kobold Minority"
+ glp_save_edit_events.EVTMINORITIESA32:0 "Remove Orc Minority"
+ glp_save_edit_events.EVTMINORITIESA33:0 "Remove Ruinborn Minority"
+ glp_save_edit_events.EVTMINORITIESA34:0 "Remove Troll Minority"
+ glp_save_edit_events.EVTMINORITIESA35:0 "Remove Ogre Minority"
+ glp_save_edit_events.EVTMINORITIESA36:0 "Remove Centaur Minority"
+ glp_save_edit_events.EVTMINORITIESA37:0 "Remove Hobgoblin Minority"
+ glp_save_edit_events.EVTMINORITIESA38:0 "Remove Harimari Minority"
+ glp_save_edit_events.EVTMINORITIESA39:0 "Remove Lizardfolk Minority"
+ glp_save_edit_events.EVTMINORITIESA40:0 "Remove Mechanim Minority"
+
+
+ # glp_save_edit_events.EVTNAME3:0 "Change [From.Owner.GetName]'s government"
+ # glp_save_edit_events.EVTDESC3:0 "Choose the government type for [From.Owner.GetName]."
+ # glp_save_edit_events.EVTOPTA3:0 "Nevermind"
+ # glp_save_edit_events.EVTOPTB3:0 "Monarchy"
+ # glp_save_edit_events.EVTOPTC3:0 "Republic"
+ # glp_save_edit_events.EVTOPTD3:0 "Theocracy"
+ # glp_save_edit_events.EVTOPTE3:0 "Tribal"
+ # glp_save_edit_events.EVTNAME4:0 "Changed Government"
+ # glp_save_edit_events.EVTDESC4:0 "My Lord! By the decree of the Vampiric Conclave, our nation just became a [Root.GovernmentName]! May the new ways of governing allow us to build a brighter future for us and our children!"
+ # glp_save_edit_events.EVTOPTA4:0 "Let us embrace the new tomorrow!"
+ # glp_government_flipped_tt:0 "§Y[Root.GetName]'s government type has been changed by the Vampiric Conclave intervention!§!"
  
  glp_save_edit_events.EVTNAME5:0 "Spawn Troops for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC5:0 "Decide how many and what type of troops to spawn for [From.Owner.GetName] in the province of [From.GetName]."
@@ -98,9 +143,9 @@
  glp_save_edit_events.EVTLEADERA05:0 "Diplomatic Tuition +0/+1/+0"
  glp_save_edit_events.EVTLEADERA06:0 "Military Tuition +0/+0/+1"
  glp_save_edit_events.EVTLEADERA07:0 "Get Stupidier -1/-1/-1"
-# glp_save_edit_events.EVTOPTH9:0 "Grzegorz Brzeczyszczykiewicz Ruler"
-# glp_save_edit_events.EVTOPTI9:0 "Jan Pawel II"
-# glp_save_edit_events.EVTOPTJ9:0 "Arthur Pendragon"
+ # glp_save_edit_events.EVTOPTH9:0 "Grzegorz Brzeczyszczykiewicz Ruler"
+ # glp_save_edit_events.EVTOPTI9:0 "Jan Pawel II"
+ # glp_save_edit_events.EVTOPTJ9:0 "Arthur Pendragon"
  glp_save_edit_events.EVTNAME10:0 "Ruler Tuition for [Root.Monarch.GetName]"
  glp_save_edit_events.EVTDESC10:0 "My [Root.Monarch.GetTitle]! Our [Root.Monarch.GetRulerTitleAndNameOrRegency], [Root.Monarch.GetName] has received tuition from no other than the very best - Skygroot Mendel! He is now wiser then he ever was before!"
  glp_save_edit_events.EVTOPTA10:0 "Maginificent!"
@@ -113,10 +158,10 @@
  glp_save_edit_events.EVTOPTA11:0 "Disgraceful!"
  glp_ruler_assasinated_tt:0 "§Y[Root.GetName]'s ruler has been assassinated by the intervention of Skygroot Mendel!§!"
  glp_heir_assasinated_tt:0 "§Y[Root.GetName]'s  heir has been assassinated by the intervention of Skygroot Mendel!§!"
-# glp_save_edit_events.EVTNAME12:0 "Heavenly Ruler"
-# glp_save_edit_events.EVTDESC12:0 "My [Root.Monarch.GetTitle]! The Vampiric Conclave has crowned [Root.Monarch.GetName] as our ruler. The future of our nation looks bright under this new leadership!"
-# glp_save_edit_events.EVTOPTA12:0 "Oh my."
-# glp_new_ruler_tt:0 "§YNew Ruler ascends the throne by the intervention of the Vampiric Conclave!§!"
+ # glp_save_edit_events.EVTNAME12:0 "Heavenly Ruler"
+ # glp_save_edit_events.EVTDESC12:0 "My [Root.Monarch.GetTitle]! The Vampiric Conclave has crowned [Root.Monarch.GetName] as our ruler. The future of our nation looks bright under this new leadership!"
+ # glp_save_edit_events.EVTOPTA12:0 "Oh my."
+ # glp_new_ruler_tt:0 "§YNew Ruler ascends the throne by the intervention of the Vampiric Conclave!§!"
  
  glp_save_edit_events.EVTNAME13:0 "Grant Monarch Power to [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC13:0 "Decide how much Monarch Power to grant to [From.Owner.GetName]."
@@ -237,9 +282,9 @@
  glp_save_edit_events.EVTGENERALA03:0 "50 AT Conquistador"
  glp_save_edit_events.EVTGENERALA04:0 "100 AT Conquistador"
  glp_save_edit_events.EVTGENERALA05:0 "Spawn War Wizard"
-#glp_save_edit_events.EVTOPTF17:0 "Aleksji Dynamitov"
-#glp_save_edit_events.EVTOPTG17:0 "Lancelot of the Lake"
-#glp_save_edit_events.EVTOPTH17:0 "Sir Tristan and Isolde"
+ #glp_save_edit_events.EVTOPTF17:0 "Aleksji Dynamitov"
+ #glp_save_edit_events.EVTOPTG17:0 "Lancelot of the Lake"
+ #glp_save_edit_events.EVTOPTH17:0 "Sir Tristan and Isolde"
  glp_save_edit_events.EVTNAME18:0 "Received New General"
  glp_save_edit_events.EVTDESC18:0 "My [Root.Monarch.GetTitle]! The greatest council of the whole world - Infernal Troll Game Masters, sent one of his great generals to our [Root.GovernmentName]! He will lead our troops to the great victories!"
  glp_save_edit_events.EVTOPTA18:0 "Let our enemies tremble in fear!"
@@ -252,7 +297,7 @@
  glp_save_edit_events.EVTAMIRALA02:0 "100 NT Admiral"
  glp_save_edit_events.EVTAMIRALA03:0 "50 NT Explorer"
  glp_save_edit_events.EVTAMIRALA04:0 "100 NT Explorer"
-#glp_save_edit_events.EVTOPTF19:0 "Jack Sparrow"
+ #glp_save_edit_events.EVTOPTF19:0 "Jack Sparrow"
  glp_save_edit_events.EVTNAME20:0 "A New Admiral Arrived!"
  glp_save_edit_events.EVTDESC20:0 "My [Root.Monarch.GetTitle]! The greatest council of the whole world - Infernal Troll Game Masters, sent one of his great admirals to our [Root.GovernmentName]! He will lead our armadas to the great victories!"
  glp_save_edit_events.EVTOPTA20:0 "Give this man a Boat."
@@ -293,6 +338,9 @@
  glp_save_edit_events.EVTFIXINGA08:0 "+5 Corruption"
  glp_save_edit_events.EVTFIXINGA09:0 "+10 Corruption"
  glp_save_edit_events.EVTFIXINGA10:0 "Remove AE opinion with players"
+ glp_save_edit_events.EVTFIXINGA11:0 "Add 100 AE opinion with players"
+ glp_save_edit_events.EVTFIXINGA12:0 "Remove AE opinion with AI"
+ glp_save_edit_events.EVTFIXINGA13:0 "Add 100 AE opinion with AI"  
  glp_GM_nation_buffs:0 "GM Nation"
  
  glp_save_edit_events.EVTNAME24:0 "Change religion in the province of [From.GetName]"
@@ -335,6 +383,7 @@
  glp_save_edit_events.EVTDESC25:0 "Decide how much treasury to donate to the nation of [From.Owner.GetName]."
  glp_save_edit_events.EVTOPTA25:0 "Nevermind"
  glp_save_edit_events.EVTOPTB25:0 "One year of their income"
+ glp_save_edit_events.EVTOPTaB25:0 "Ten year of their income"
  glp_save_edit_events.EVTOPTC25:0 "100 Ducats"
  glp_save_edit_events.EVTOPTD25:0 "250 Ducats"
  glp_save_edit_events.EVTOPTE25:0 "500 Ducats"
@@ -345,26 +394,93 @@
  glp_save_edit_events.EVTDESC27:0 "Do you want to release all possible countries From [From.Owner.GetName]?"
  glp_save_edit_events.EVTOPTA27:0 "No"
  glp_save_edit_events.EVTOPTB27:0 "Yes"
+ 
  glp_save_edit_events.EVTNAME28:0 "Modifier Rewards for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC28:0 "What kind of modifier do you want for [From.Owner.GetName]?"
- glp_save_edit_events.EVTOPTA28:0 "Nevermind"
- glp_save_edit_events.EVTOPTB28:0 "Settler Quest Reward"
- glp_save_edit_events.EVTOPTC28:0 "Colonial Quest Reward"
- glp_save_edit_events.EVTOPTD28:0 "Missionary Quest Reward"
- glp_save_edit_events.EVTOPTE28:0 "Conversion Quest Reward"
- glp_save_edit_events.EVTOPTF28:0 "Cavalry Mercenary Quest Reward"
- glp_save_edit_events.EVTOPTG28:0 "Trade Quest Reward"
- glp_save_edit_events.EVTOPTH28:0 "Stability Quest Reward"
- glp_save_edit_events.EVTOPTI28:0 "Diplomatic Quest Reward"
- glp_save_edit_events.EVTOPTJ28:0 "Infantry Mercenary Quest Reward"
- glp_save_edit_events.EVTOPTK28:0 "Artillery Mercenary Quest Reward"
- glp_quest_reward_colonist:0 "Settler Quest Reward"
- glp_quest_reward_settler:0 "Colonial Quest Reward"
- glp_quest_reward_missionary:0 "Missionary Quest Reward"
- glp_quest_reward_conversion:0 "Conversion Quest Reward"
- glp_quest_reward_mercenary:0 "Mercenary Quest Reward"
- glp_quest_reward_mercenary_inf:0 "Mercenary Quest Reward"
- glp_quest_reward_mercenary_art:0 "Mercenary Quest Reward"
+ glp_save_edit_events.EVTCAPACTIVEZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTCAPACTIVEA01:0 "Idea industrial activation"
+ glp_idea_industrial_completed:0 "Idea industrial bonus"
+ glp_save_edit_events.EVTCAPACTIVEA02:0 "Idea innovation activation"
+ glp_idea_innovation_completed:0 "Idea innovation bonus"
+ glp_save_edit_events.EVTCAPACTIVEA03:0 "Idea economic activation"
+ glp_idea_economic_completed:0 "Idea economic bonus"
+ glp_save_edit_events.EVTCAPACTIVEA04:0 "Idea expansion activation"
+ glp_idea_expansion_completed:0 "Idea expansion bonus"
+ glp_save_edit_events.EVTCAPACTIVEA05:0 "Idea administrative activation"
+ glp_idea_administrative_completed:0 "Idea administrative bonus"
+ glp_save_edit_events.EVTCAPACTIVEA06:0 "Idea tolerance activation"
+ glp_idea_tolerance_completed:0 "Idea tolerance bonus"
+ glp_save_edit_events.EVTCAPACTIVEA07:0 "Idea religious activation"
+ glp_idea_religious_completed:0 "Idea religious bonus"
+ glp_save_edit_events.EVTCAPACTIVEA08:0 "Idea elven supremacy activation"
+ glp_idea_elven_supremacy_completed:0 "Idea elven supremacy bonus"
+ glp_save_edit_events.EVTCAPACTIVEA09:0 "Idea jurisprudence activation"
+ glp_idea_jurisprudence_completed:0 "Idea jurisprudence bonus"
+ glp_save_edit_events.EVTCAPACTIVEA10:0 "Idea health activation (Clear devastation on region)"
+ glp_idea_health_completed:0 "Idea health bonus"
+ glp_save_edit_events.EVTCAPACTIVEA11:0 "Idea plutocracy activation"
+ glp_idea_plutocracy_completed:0 "Idea plutocracy bonus"
+ glp_save_edit_events.EVTCAPACTIVEA12:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA13:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA14:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA15:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA16:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA17:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA18:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA19:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA20:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA21:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA22:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA23:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA24:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA25:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA26:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA27:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA28:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA29:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA30:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA31:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA32:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA33:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA34:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA35:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA36:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA37:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA38:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA39:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA40:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA41:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA42:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA43:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA44:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA45:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA46:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA47:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA48:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA49:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA50:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA51:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA52:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA53:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA54:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA55:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA56:0 "Idea  activation"
+# glp_save_edit_events.EVTOPTC28:0 "Colonial Quest Reward"
+# glp_save_edit_events.EVTOPTD28:0 "Missionary Quest Reward"
+# glp_save_edit_events.EVTOPTE28:0 "Conversion Quest Reward"
+# glp_save_edit_events.EVTOPTF28:0 "Cavalry Mercenary Quest Reward"
+# glp_save_edit_events.EVTOPTG28:0 "Trade Quest Reward"
+# glp_save_edit_events.EVTOPTH28:0 "Stability Quest Reward"
+# glp_save_edit_events.EVTOPTI28:0 "Diplomatic Quest Reward"
+# glp_save_edit_events.EVTOPTJ28:0 "Infantry Mercenary Quest Reward"
+# glp_save_edit_events.EVTOPTK28:0 "Artillery Mercenary Quest Reward"
+# glp_quest_reward_colonist:0 "Settler Quest Reward"
+# glp_quest_reward_settler:0 "Colonial Quest Reward"
+# glp_quest_reward_missionary:0 "Missionary Quest Reward"
+# glp_quest_reward_conversion:0 "Conversion Quest Reward"
+# glp_quest_reward_mercenary:0 "Mercenary Quest Reward"
+# glp_quest_reward_mercenary_inf:0 "Mercenary Quest Reward"
+# glp_quest_reward_mercenary_art:0 "Mercenary Quest Reward"
  glp_new_merc_company:0 "§YKnights of Round Table§! mercenary company is now available for 10 years to assist us in our military efforts!"
  glp_merc_company_expired:0 "§YKnights of Round Table§! Mercenary Company will be no longer available!"
  glp_kingts_of_round:0 "Knights of the Round Table"
