Spawn building for admin

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -575,18 +575,34 @@
  glp_gm_events.EVTDESC4:0 "His Highness, Vlad Draculea has visited [From.Owner.GetName] in his travels to share the knowledge of institution!\nPointy sticks are suddenly the fashion craze of the season! Garlic on the other hand... Not so much."
  glp_gm_events.EVTOPTA4:0 "Thank You Vlad Draculea!"
  glp_institution_spawned_tt:0 "§YInstitution has beeen spawned in one of your provinces!§!"
+ 
  glp_save_edit_events.EVTNAME71:0 "[From.GetName] Create Building"
  glp_save_edit_events.EVTDESC71:0 "Decide what kind of buildings you want in [From.GetName]"
- glp_save_edit_events.EVTOPTA71:0 "Manufactory"
- glp_save_edit_events.EVTOPTB71:0 "Eco Setup lvl1"
- glp_save_edit_events.EVTOPTC71:0 "Eco Setup lvl2"
- glp_save_edit_events.EVTOPTD71:0 "Mil Setup lvl 1"
- glp_save_edit_events.EVTOPTE71:0 "Mil Setup lvl 2"
- glp_save_edit_events.EVTOPTF71:0 "Build/Upgrade Tax Building"
- glp_save_edit_events.EVTOPTG71:0 "Build/Upgrade Production Building"
- glp_save_edit_events.EVTOPTH71:0 "Build/Upgrade Manpower Building"
- glp_save_edit_events.EVTOPTI71:0 "Build/Upgrade FL Building"
- glp_save_edit_events.EVTOPTJ71:0 "Nevermind"
+ glp_save_edit_events.EVTBATA01:0 "Manufactory"
+ glp_save_edit_events.EVTBATA02:0 "Remove Manufactory"
+ glp_save_edit_events.EVTBATA03:0 "Temple"
+ glp_save_edit_events.EVTBATA04:0 "Workshop"
+ glp_save_edit_events.EVTBATA05:0 "Cathedral"
+ glp_save_edit_events.EVTBATA06:0 "Counting house"
+ glp_save_edit_events.EVTBATA07:0 "Barracks"
+ glp_save_edit_events.EVTBATA08:0 "Regimental Camp"
+ glp_save_edit_events.EVTBATA09:0 "Conscription Center"
+ glp_save_edit_events.EVTBATA10:0 "Training Fields"
+ glp_save_edit_events.EVTBATA11:0 "Remove tax Building"
+ glp_save_edit_events.EVTBATA12:0 "Remove prod Building"
+ glp_save_edit_events.EVTBATA13:0 "Remove manpower Building"
+ glp_save_edit_events.EVTBATA14:0 "Remove FL Building"
+ glp_save_edit_events.EVTBATA15:0 "ADD/upgrade road"
+ glp_save_edit_events.EVTBATA16:0 "Mage Tower"
+ glp_save_edit_events.EVTBATA17:0 "Remove Mage Tower"
+ glp_save_edit_events.EVTBATA18:0 "Add magic fort"
+ glp_save_edit_events.EVTBATA19:0 "Fort t1"
+ glp_save_edit_events.EVTBATA20:0 "Fort t2"
+ glp_save_edit_events.EVTBATA21:0 "Fort t3"
+ glp_save_edit_events.EVTBATA22:0 "Fort t4"
+ glp_save_edit_events.EVTBATA23:0 "Fort t5"
+ glp_save_edit_events.EVTBATA24:0 "Remove fort"
+ glp_save_edit_events.EVTBATZZ1:0 "Nevermind"
 
 
  A1A:0 "MJ"
