--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -40,6 +40,51 @@
  glp_save_edit_events.EVTOPTA2:0 "Interesting..."
  glp_religion_changed_tt:0 "§Y[Root.GetName]'s faith has been changed by the Infernal Troll Game Master's intervention!§!"
  
+ glp_save_edit_events.EVTNAME3:0 "Adding minorities in the province of [From.GetName]"
+ glp_save_edit_events.EVTDESC3:0 "Choose what type of minorities you want to modify in [From.GetName]"
+ glp_save_edit_events.EVTMINORITIESZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTMINORITIESA01:0 "Add Elven Minority"
+ glp_save_edit_events.EVTMINORITIESA02:0 "Add Dwarven Minority"
+ glp_save_edit_events.EVTMINORITIESA03:0 "Add Gnoll Minority"
+ glp_save_edit_events.EVTMINORITIESA04:0 "Add Gnome Minority"
+ glp_save_edit_events.EVTMINORITIESA05:0 "Add Goblin Minority"
+ glp_save_edit_events.EVTMINORITIESA06:0 "Add Half-elven Minority"
+ glp_save_edit_events.EVTMINORITIESA07:0 "Add Half-orc Minority"
+ glp_save_edit_events.EVTMINORITIESA08:0 "Add Halfling Minority"
+ glp_save_edit_events.EVTMINORITIESA09:0 "Add Harpy Minority"
+ glp_save_edit_events.EVTMINORITIESA10:0 "Add Human Minority"
+ glp_save_edit_events.EVTMINORITIESA11:0 "Add Kobold Minority"
+ glp_save_edit_events.EVTMINORITIESA12:0 "Add Orc Minority"
+ glp_save_edit_events.EVTMINORITIESA13:0 "Add Ruinborn Minority"
+ glp_save_edit_events.EVTMINORITIESA14:0 "Add Troll Minority"
+ glp_save_edit_events.EVTMINORITIESA15:0 "Add Ogre Minority"
+ glp_save_edit_events.EVTMINORITIESA16:0 "Add Centaur Minority"
+ glp_save_edit_events.EVTMINORITIESA17:0 "Add Hobgoblin Minority"
+ glp_save_edit_events.EVTMINORITIESA18:0 "Add Harimari Minority"
+ glp_save_edit_events.EVTMINORITIESA19:0 "Add Lizardfolk Minority"
+ glp_save_edit_events.EVTMINORITIESA20:0 "Add Mechanim Minority"
+ glp_save_edit_events.EVTMINORITIESA21:0 "Remove Elven Minority"
+ glp_save_edit_events.EVTMINORITIESA22:0 "Remove Dwarven Minority"
+ glp_save_edit_events.EVTMINORITIESA23:0 "Remove Gnoll Minority"
+ glp_save_edit_events.EVTMINORITIESA24:0 "Remove Gnome Minority"
+ glp_save_edit_events.EVTMINORITIESA25:0 "Remove Goblin Minority"
+ glp_save_edit_events.EVTMINORITIESA26:0 "Remove Half-elven Minority"
+ glp_save_edit_events.EVTMINORITIESA27:0 "Remove Half-orc Minority"
+ glp_save_edit_events.EVTMINORITIESA28:0 "Remove Halfling Minority"
+ glp_save_edit_events.EVTMINORITIESA29:0 "Remove Harpy Minority"
+ glp_save_edit_events.EVTMINORITIESA30:0 "Remove Human Minority"
+ glp_save_edit_events.EVTMINORITIESA31:0 "Remove Kobold Minority"
+ glp_save_edit_events.EVTMINORITIESA32:0 "Remove Orc Minority"
+ glp_save_edit_events.EVTMINORITIESA33:0 "Remove Ruinborn Minority"
+ glp_save_edit_events.EVTMINORITIESA34:0 "Remove Troll Minority"
+ glp_save_edit_events.EVTMINORITIESA35:0 "Remove Ogre Minority"
+ glp_save_edit_events.EVTMINORITIESA36:0 "Remove Centaur Minority"
+ glp_save_edit_events.EVTMINORITIESA37:0 "Remove Hobgoblin Minority"
+ glp_save_edit_events.EVTMINORITIESA38:0 "Remove Harimari Minority"
+ glp_save_edit_events.EVTMINORITIESA39:0 "Remove Lizardfolk Minority"
+ glp_save_edit_events.EVTMINORITIESA40:0 "Remove Mechanim Minority"
+
+
  # glp_save_edit_events.EVTNAME3:0 "Change [From.Owner.GetName]'s government"
  # glp_save_edit_events.EVTDESC3:0 "Choose the government type for [From.Owner.GetName]."
  # glp_save_edit_events.EVTOPTA3:0 "Nevermind"
@@ -293,7 +338,9 @@
  glp_save_edit_events.EVTFIXINGA08:0 "+5 Corruption"
  glp_save_edit_events.EVTFIXINGA09:0 "+10 Corruption"
  glp_save_edit_events.EVTFIXINGA10:0 "Remove AE opinion with players"
-
+ glp_save_edit_events.EVTFIXINGA11:0 "Add 100 AE opinion with players"
+ glp_save_edit_events.EVTFIXINGA12:0 "Remove AE opinion with AI"
+ glp_save_edit_events.EVTFIXINGA13:0 "Add 100 AE opinion with AI"  
  glp_GM_nation_buffs:0 "GM Nation"
  
  glp_save_edit_events.EVTNAME24:0 "Change religion in the province of [From.GetName]"
