Boutons et ajout de la décision de 10 ans d'income

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -371,10 +371,12 @@
  glp_save_edit_events.EVTOPTW24:0 "Tengri"
  glp_save_edit_events.EVTOPTX24:0 "Jewish"
  glp_save_edit_events.EVTOPTY24:0 "Zoroastrian"
+ 
  glp_save_edit_events.EVTNAME25:0 "Donation for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC25:0 "Decide how much treasury to donate to the nation of [From.Owner.GetName]."
  glp_save_edit_events.EVTOPTA25:0 "Nevermind"
  glp_save_edit_events.EVTOPTB25:0 "One year of their income"
+ glp_save_edit_events.EVTOPTaB25:0 "Ten year of their income"
  glp_save_edit_events.EVTOPTC25:0 "100 Ducats"
  glp_save_edit_events.EVTOPTD25:0 "250 Ducats"
  glp_save_edit_events.EVTOPTE25:0 "500 Ducats"
