tech + more building for admin

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -297,7 +297,7 @@
  
  glp_save_edit_events.EVTNAME24:0 "Change religion in the province of [From.GetName]"
  glp_save_edit_events.EVTDESC24:0 "Decide the religion of the province of [From.GetName]."
- glp_save_edit_events.EVTOPTZ24:0 "Nevermind"
+ glp_save_edit_events.EVTOPTZZ1:0 "Nevermind"
  glp_save_edit_events.EVTOPTAA24:0 "Corinite"
  glp_save_edit_events.EVTOPTA24:0 "Regent Court"
  glp_save_edit_events.EVTOPTB24:0 "Dalcabba"
@@ -596,12 +596,27 @@
  glp_save_edit_events.EVTBATA16:0 "Mage Tower"
  glp_save_edit_events.EVTBATA17:0 "Remove Mage Tower"
  glp_save_edit_events.EVTBATA18:0 "Add magic fort"
- glp_save_edit_events.EVTBATA19:0 "Fort t1"
+ glp_save_edit_events.EVTBATA19:0 "Remove magic fort"
  glp_save_edit_events.EVTBATA20:0 "Fort t2"
- glp_save_edit_events.EVTBATA21:0 "Fort t3"
- glp_save_edit_events.EVTBATA22:0 "Fort t4"
- glp_save_edit_events.EVTBATA23:0 "Fort t5"
+ glp_save_edit_events.EVTBATA21:0 "Fort t4"
+ glp_save_edit_events.EVTBATA22:0 "Fort t6"
+ glp_save_edit_events.EVTBATA23:0 "Fort t8"
  glp_save_edit_events.EVTBATA24:0 "Remove fort"
+ glp_save_edit_events.EVTBATA25:0 "Market place"
+ glp_save_edit_events.EVTBATA26:0 "Trade depot"
+ glp_save_edit_events.EVTBATA27:0 "Stock Exchange "
+ glp_save_edit_events.EVTBATA28:0 "Remove Trade buildings"
+ glp_save_edit_events.EVTBATA29:0 "Courthouse"
+ glp_save_edit_events.EVTBATA30:0 "Town Hall"
+ glp_save_edit_events.EVTBATA31:0 "Remove admin buildings"
+ glp_save_edit_events.EVTBATA32:0 "University"
+ glp_save_edit_events.EVTBATA33:0 "Remove University"
+ glp_save_edit_events.EVTBATA34:0 "Shipyard"
+ glp_save_edit_events.EVTBATA35:0 "Grand Shipyard"
+ glp_save_edit_events.EVTBATA36:0 "Remove Navy FL"
+ glp_save_edit_events.EVTBATA37:0 "Dock"
+ glp_save_edit_events.EVTBATA38:0 "Dry Dock"
+ glp_save_edit_events.EVTBATA39:0 "Remove Sailor buildings"
  glp_save_edit_events.EVTBATZZ1:0 "Nevermind"
 
 
