Modifications MJ tool

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -387,26 +387,93 @@
  glp_save_edit_events.EVTDESC27:0 "Do you want to release all possible countries From [From.Owner.GetName]?"
  glp_save_edit_events.EVTOPTA27:0 "No"
  glp_save_edit_events.EVTOPTB27:0 "Yes"
+ 
  glp_save_edit_events.EVTNAME28:0 "Modifier Rewards for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC28:0 "What kind of modifier do you want for [From.Owner.GetName]?"
- glp_save_edit_events.EVTOPTA28:0 "Nevermind"
- glp_save_edit_events.EVTOPTB28:0 "Settler Quest Reward"
- glp_save_edit_events.EVTOPTC28:0 "Colonial Quest Reward"
- glp_save_edit_events.EVTOPTD28:0 "Missionary Quest Reward"
- glp_save_edit_events.EVTOPTE28:0 "Conversion Quest Reward"
- glp_save_edit_events.EVTOPTF28:0 "Cavalry Mercenary Quest Reward"
- glp_save_edit_events.EVTOPTG28:0 "Trade Quest Reward"
- glp_save_edit_events.EVTOPTH28:0 "Stability Quest Reward"
- glp_save_edit_events.EVTOPTI28:0 "Diplomatic Quest Reward"
- glp_save_edit_events.EVTOPTJ28:0 "Infantry Mercenary Quest Reward"
- glp_save_edit_events.EVTOPTK28:0 "Artillery Mercenary Quest Reward"
- glp_quest_reward_colonist:0 "Settler Quest Reward"
- glp_quest_reward_settler:0 "Colonial Quest Reward"
- glp_quest_reward_missionary:0 "Missionary Quest Reward"
- glp_quest_reward_conversion:0 "Conversion Quest Reward"
- glp_quest_reward_mercenary:0 "Mercenary Quest Reward"
- glp_quest_reward_mercenary_inf:0 "Mercenary Quest Reward"
- glp_quest_reward_mercenary_art:0 "Mercenary Quest Reward"
+ glp_save_edit_events.EVTCAPACTIVEZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTCAPACTIVEA01:0 "Idea industrial activation"
+ glp_idea_industrial_completed:0 "Idea industrial bonus"
+ glp_save_edit_events.EVTCAPACTIVEA02:0 "Idea innovation activation"
+ glp_idea_innovation_completed:0 "Idea innovation bonus"
+ glp_save_edit_events.EVTCAPACTIVEA03:0 "Idea economic activation"
+ glp_idea_economic_completed:0 "Idea economic bonus"
+ glp_save_edit_events.EVTCAPACTIVEA04:0 "Idea expansion activation"
+ glp_idea_expansion_completed:0 "Idea expansion bonus"
+ glp_save_edit_events.EVTCAPACTIVEA05:0 "Idea administrative activation"
+ glp_idea_administrative_completed:0 "Idea administrative bonus"
+ glp_save_edit_events.EVTCAPACTIVEA06:0 "Idea tolerance activation"
+ glp_idea_tolerance_completed:0 "Idea tolerance bonus"
+ glp_save_edit_events.EVTCAPACTIVEA07:0 "Idea religious activation"
+ glp_idea_religious_completed:0 "Idea religious bonus"
+ glp_save_edit_events.EVTCAPACTIVEA08:0 "Idea elven supremacy activation"
+ glp_idea_elven_supremacy_completed:0 "Idea elven supremacy bonus"
+ glp_save_edit_events.EVTCAPACTIVEA09:0 "Idea jurisprudence activation"
+ glp_idea_jurisprudence_completed:0 "Idea jurisprudence bonus"
+ glp_save_edit_events.EVTCAPACTIVEA10:0 "Idea health activation (Clear devastation on region)"
+ glp_idea_health_completed:0 "Idea health bonus"
+ glp_save_edit_events.EVTCAPACTIVEA11:0 "Idea plutocracy activation"
+ glp_idea_plutocracy_completed:0 "Idea plutocracy bonus"
+ glp_save_edit_events.EVTCAPACTIVEA12:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA13:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA14:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA15:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA16:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA17:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA18:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA19:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA20:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA21:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA22:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA23:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA24:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA25:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA26:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA27:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA28:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA29:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA30:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA31:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA32:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA33:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA34:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA35:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA36:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA37:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA38:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA39:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA40:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA41:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA42:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA43:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA44:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA45:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA46:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA47:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA48:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA49:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA50:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA51:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA52:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA53:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA54:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA55:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA56:0 "Idea  activation"
+# glp_save_edit_events.EVTOPTC28:0 "Colonial Quest Reward"
+# glp_save_edit_events.EVTOPTD28:0 "Missionary Quest Reward"
+# glp_save_edit_events.EVTOPTE28:0 "Conversion Quest Reward"
+# glp_save_edit_events.EVTOPTF28:0 "Cavalry Mercenary Quest Reward"
+# glp_save_edit_events.EVTOPTG28:0 "Trade Quest Reward"
+# glp_save_edit_events.EVTOPTH28:0 "Stability Quest Reward"
+# glp_save_edit_events.EVTOPTI28:0 "Diplomatic Quest Reward"
+# glp_save_edit_events.EVTOPTJ28:0 "Infantry Mercenary Quest Reward"
+# glp_save_edit_events.EVTOPTK28:0 "Artillery Mercenary Quest Reward"
+# glp_quest_reward_colonist:0 "Settler Quest Reward"
+# glp_quest_reward_settler:0 "Colonial Quest Reward"
+# glp_quest_reward_missionary:0 "Missionary Quest Reward"
+# glp_quest_reward_conversion:0 "Conversion Quest Reward"
+# glp_quest_reward_mercenary:0 "Mercenary Quest Reward"
+# glp_quest_reward_mercenary_inf:0 "Mercenary Quest Reward"
+# glp_quest_reward_mercenary_art:0 "Mercenary Quest Reward"
  glp_new_merc_company:0 "§YKnights of Round Table§! mercenary company is now available for 10 years to assist us in our military efforts!"
  glp_merc_company_expired:0 "§YKnights of Round Table§! Mercenary Company will be no longer available!"
  glp_kingts_of_round:0 "Knights of the Round Table"
