Progression 22/54 idea admin panel
Ajout d'une fonctionnalité Allow qui ne présente les options que si le pays a vraiment complété l'idée. (chiant pour test mais plus confortable pour l'admin)

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  glp_save_edit_events.EVTNAME1:0 "Change [From.Owner.GetName]'s religion"
  glp_save_edit_events.EVTDESC1:0 "Decide a religion for the nation of [From.Owner.GetName]."
  glp_save_edit_events.EVTRELIGIONZZ1:0 "Nevermind"
@@ -418,19 +418,31 @@ l_english:
  glp_idea_jurisprudence_completed:0 "Idea jurisprudence bonus"
  glp_save_edit_events.EVTCAPACTIVEA10:0 "Idea health activation (Clear devastation on region)"
  glp_idea_health_completed:0 "Idea health bonus"
- glp_save_edit_events.EVTCAPACTIVEA11:0 "Idea plutocracy activation"
+ glp_save_edit_events.EVTCAPACTIVEA11:0 "Idea plutocracy activation (Convertir l'excès par de la mana)"
  glp_idea_plutocracy_completed:0 "Idea plutocracy bonus"
- glp_save_edit_events.EVTCAPACTIVEA12:0 "Idea  activation"
- glp_save_edit_events.EVTCAPACTIVEA13:0 "Idea  activation"
- glp_save_edit_events.EVTCAPACTIVEA14:0 "Idea  activation"
- glp_save_edit_events.EVTCAPACTIVEA15:0 "Idea  activation"
- glp_save_edit_events.EVTCAPACTIVEA16:0 "Idea  activation"
- glp_save_edit_events.EVTCAPACTIVEA17:0 "Idea  activation"
- glp_save_edit_events.EVTCAPACTIVEA18:0 "Idea  activation"
- glp_save_edit_events.EVTCAPACTIVEA19:0 "Idea  activation"
- glp_save_edit_events.EVTCAPACTIVEA20:0 "Idea  activation"
- glp_save_edit_events.EVTCAPACTIVEA21:0 "Idea  activation"
- glp_save_edit_events.EVTCAPACTIVEA22:0 "Idea  activation"
+ glp_save_edit_events.EVTCAPACTIVEA12:0 "Idea divine activation"
+ glp_idea_divine_completed:0 "Idea divine bonus"
+ glp_save_edit_events.EVTCAPACTIVEA13:0 "Idea aristocracy activation"
+ glp_idea_aristocracy_completed:0 "Idea aristocracy bonus"
+ glp_save_edit_events.EVTCAPACTIVEA14:0 "Idea horde activation"
+ glp_idea_horde_completed:0 "Idea horde bonus"
+ glp_save_edit_events.EVTCAPACTIVEA15:0 "Idea state administration activation"
+ glp_idea_state_administration_completed:0 "Idea state administration bonus"
+ glp_save_edit_events.EVTCAPACTIVEA16:0 "Idea centralisation activation"
+ glp_idea_centralisation_completed:0 "Idea centralisation bonus"
+ glp_save_edit_events.EVTCAPACTIVEA17:0 "Idea decentralisation activation"
+ glp_idea_decentralisation_completed:0 "Idea decentralisation bonus"
+ glp_save_edit_events.EVTCAPACTIVEA18:0 "Idea infrastructure activation"
+ glp_idea_infrastructure_completed:0 "Idea infrastructure bonus"
+ glp_save_edit_events.EVTCAPACTIVEA19:0 "Idea colonial empire activation"
+ glp_idea_colonial_empire_completed:0 "Idea colonial empire bonus"
+ glp_idea_colonial_empire_completed_subject:0 "Idea colonial empire bonus (subject)"
+ glp_save_edit_events.EVTCAPACTIVEA20:0 "Idea espionnage activation"
+ glp_idea_espionnage_completed:0 "Idea espionnage bonus"
+ glp_save_edit_events.EVTCAPACTIVEA21:0 "Idea diplomatic activation"
+ glp_idea_diplomatic_completed:0 "Idea diplomatic bonus"
+ glp_save_edit_events.EVTCAPACTIVEA22:0 "Idea influence activation"
+ glp_idea_influence_completed:0 "Idea influence bonus"
  glp_save_edit_events.EVTCAPACTIVEA23:0 "Idea  activation"
  glp_save_edit_events.EVTCAPACTIVEA24:0 "Idea  activation"
  glp_save_edit_events.EVTCAPACTIVEA25:0 "Idea  activation"
