Correction UTF8 BOM et Trad_FR  117/617
Le fichier de 5.3 millions de caractères à été traduit !

--- a/3362815204/localisation/anb_governments_l_french.yml
+++ b/3362815204/localisation/anb_governments_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 mengi_kingdom_reform:0 "Royaume de Mengi"
 mengi_kingdom_reform_desc:0 "La royauté est imprégnée dans l'essence même de Madriamilak, car c'est la terre des rois. Ici, ni le sang ni la divinité ne déterminent le droit de régner, mais plutôt la capacité à la violence qui prouve leur valeur. La compétition est féroce et omniprésente parmi ceux qui cherchent à devenir de véritables royautés - la violence entre ces parvenus et leurs partisans est une partie normale de la société Mengi."
 wine_lord_reform:0 "Seigneur du Vin"
