--- a/3362815204/localisation/anb_harpy_gov_bar_l_french.yml
+++ b/3362815204/localisation/anb_harpy_gov_bar_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 harpy_march_bonuses:0 "Sujet choisi par le suzerain Harpie"
 ability_harpylen_queendom_claim_mechanic: "Revendication du Royaume"
 harpylen_queendom_power: "Revendication du Royaume"
