--- a/3362815204/localisation/anb_holy_orders_l_french.yml
+++ b/3362815204/localisation/anb_holy_orders_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  order_of_judges_order:0 "L'Ordre des Juges"
  order_of_judges_order_desc:0 "Les anciens Juges de Bulwar travaillent comme des sages itinérants indépendants de la loi. Ils œuvrent pour régler les différends et assurer que la justice soit rendue."
  servants_of_surael_order:0 "Les Serviteurs de Surael"
