--- a/3362815204/localisation/anb_kheionai_l_french.yml
+++ b/3362815204/localisation/anb_kheionai_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  #Décisions
  kheionai_nation_title:0 "Unir les Khéionai"
  kheionai_nation_desc:0 "Une majorité de la patrie Khéionai se trouve désormais sous notre contrôle, nous pouvons nous proclamer les seigneurs de tous les peuples Khéionai. §R(Avertissement : Cette nation n'a actuellement aucune mission unique)§!"
