--- a/3362815204/localisation/anb_lilac_wars_l_french.yml
+++ b/3362815204/localisation/anb_lilac_wars_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  lilac_wars_moon_party_member_Elect:0 "Perdre les Guerres des Lilas"
  lilac_wars_moon_party_lost:0 "Perdre les Guerres des Lilas"
  lilac_wars_fallow_fields:0 "Nos Champs sont en Friche"
