--- a/3362815204/localisation/anb_mage_organization_l_french.yml
+++ b/3362815204/localisation/anb_mage_organization_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  estate_organization.1.t:0 "Les Mages de $COUNTRY$"
  estate_organization.1.d:0 "Avec la fondation de notre pays, nous devons décider quel type d'institutions magiques nous devons offrir."
  estate_organization.1.a:0 "Accueillir les Guildes Magiques."
