--- a/3362815204/localisation/anb_mages_estate_events_l_french.yml
+++ b/3362815204/localisation/anb_mages_estate_events_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  mages_estate_events.0.t:0 "L'Ascension d'un Mage de Guerre"
  mages_estate_events.0.d:0 "Les Mages de Guerre, comme on les appelle, sont des mages légendaires.\n\nDes savants naturels des arts magiques, ils sont mille fois supérieurs au mage ordinaire et sont capables de détruire des armées entières d'un simple geste de la main. Un tel individu prodige, originaire de nos Académies de Mages de Bataille, s'est mis à notre disposition pour le service."
  mages_estate_events.0.a:0 "Ils domineront le champ de bataille."
