--- a/3362815204/localisation/anb_magic_battle_l_french.yml
+++ b/3362815204/localisation/anb_magic_battle_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  cast_battle_magic_title:0 "£icon_magic_small£ §SLancer une Magie de Bataille§!"
  cast_battle_magic_desc:0 "Une armée en bataille, dirigée par un leader, peut être le fournisseur de magies de bataille dévastatrices."
 
