--- a/3362815204/localisation/anb_magic_duel_l_french.yml
+++ b/3362815204/localisation/anb_magic_duel_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
 
  #Événements
  magic_duel.1.t:0 "[attacker.Monarch.GetName] VS [defender.Monarch.GetName]\n£icon_magic_duel_background£"
