--- a/3362815204/localisation/anb_magic_estates_l_french.yml
+++ b/3362815204/localisation/anb_magic_estates_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  magic_estate.goback:0 "Retour"
 
  opens_magic_estate_menu_tt:0 "Ouvrira un menu permettant de lancer un §YSort§!"
