--- a/3362815204/localisation/anb_magic_misc_events_l_french.yml
+++ b/3362815204/localisation/anb_magic_misc_events_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  magic_misc_events.1.t:0 "Hystérie des Sorts d'Enchantement"
  magic_misc_events.1.d:0 "Des rumeurs sont parvenues à nos conseillers selon lesquelles les graines de l'hystérie de masse ont commencé à se répandre. Une paranoïa à grande échelle s'est répandue parmi la population, craignant que leurs esprits n'aient peut-être pas été les leurs depuis longtemps, et que [Root.Monarch.GetName] en soit la cause !"
  magic_misc_events.1.a:0 "Utiliser tout ce que vous pouvez pour maintenir la mascarade"
