--- a/3362815204/localisation/anb_magic_on_action_l_french.yml
+++ b/3362815204/localisation/anb_magic_on_action_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
   magic_on_action.1.t:0 "Recrues Morts-Vivantes de la Bataille"
   magic_on_action.1.d:0 "L'armée des morts ne tue pas, elle recrute.\n\nUne bataille récente a fourni plus de soldats morts-vivants pour rejoindre vos rangs impies."
   magic_on_action.1.a:0 "Levez-vous !"
