--- a/3362815204/localisation/anb_magic_project_l_french.yml
+++ b/3362815204/localisation/anb_magic_project_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  homunculus_ruler:0 "Dirigeant Homoncule"
  lich_ruler:0 "Dirigeant Liche"
  magic_project_necromancy_ruler_cleansing:0 "Dirigeant subissant le Nettoyage des Ténèbres"
