--- a/3362815204/localisation/anb_magic_realm_l_french.yml
+++ b/3362815204/localisation/anb_magic_realm_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  cast_realm_magic_title:0 "£icon_magic_small£ §SLancer la Magie Royale§!"
  cast_realm_magic_desc:0 "Un mage puissant est capable de lancer des sorts qui peuvent influencer l'état lui-même."
 
