--- a/3362815204/localisation/anb_magic_siege_l_french.yml
+++ b/3362815204/localisation/anb_magic_siege_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  cast_siege_magic_title:0 "£icon_magic_small£ Lancer la Magie de Siège"
  cast_siege_magic_desc:0 "Une province (avec une forteresse) assiégée par un chef peut être le sujet de magies de siège terrifiantes."
 
