--- a/3362815204/localisation/anb_magic_study_l_french.yml
+++ b/3362815204/localisation/anb_magic_study_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  tooltip_ruler_studying_increase:0 "\n\nAméliore les chances d'§Gaugmenter§! le §Yniveau de l'école de sorts§! après la fin de l'étude."
  ruler_studying_magic:0 "Dirigeant étudiant la magie"
  ruler_studying_magic_desc:0 "Ce dirigeant étudie la magie, permettant aux événements d'étude magique de se produire."
