--- a/3362815204/localisation/anb_magnate_uprising_l_french.yml
+++ b/3362815204/localisation/anb_magnate_uprising_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  magnate_uprising_choose_side_tt:0 "Nous devons choisir un camp dans ce conflit !"
 
  magnate_rebels_name:0 "Rebelles des Magnats"
