--- a/3362815204/localisation/anb_magocracy_l_french.yml
+++ b/3362815204/localisation/anb_magocracy_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  tooltip_powerful_battlemage:0 "Un général avec le trait de sorcier de guerre sera créé."
 
  magocracy.1.a:0 "Un universitaire doué"
