--- a/3362815204/localisation/anb_mercs_l_french.yml
+++ b/3362815204/localisation/anb_mercs_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  merc__local_free_company_monstrous:0 "Bande Monstrueuse"
  merc__local_grand_company_monstrous:0 "Guerriers Monstrueux"
  merc__local_independent_army_monstrous:0 "Horde Monstrueuse"
