--- a/3362815204/localisation/anb_migration_debug_l_french.yml
+++ b/3362815204/localisation/anb_migration_debug_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  migration_force_settle.3.t:0 "Migration Impossible"
  migration_force_settle.3.d:0 "Vous ne pouvez pas migrer vers des provinces qui ont été supprimées dans les paramètres."
  migration_force_settle.3.a:0 "Ok"
