--- a/3362815204/localisation/anb_misc_l_french.yml
+++ b/3362815204/localisation/anb_misc_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  CORINITE_REBELS:0 "Rebelles Corinites"
  RAVELIAN_REBELS:0 "Rebelles Ravéliens"
  REGENT_COURT_REBELS:0 "Rebelles de la Cour Régente"
