--- a/3362815204/localisation/anb_modifiers_l_french.yml
+++ b/3362815204/localisation/anb_modifiers_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  vanbury_steel_foundry:0 "Fonderie d'acier de Vanbury"
  khazyna_estuary_modifier:0 "Estuaire de Khazyna"
  desc_khazyna_estuary_modifier:0 "Contrôler l'estuaire fluvial important de Khazyna renforce notre emprise sur le commerce dans la région."
