--- a/3362815204/localisation/anb_monstrous_l_french.yml
+++ b/3362815204/localisation/anb_monstrous_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  start_demonsterization:0 "Notre pays ne souhaite plus être considéré comme §OMonstrueux§!, nous aspirons à être vus comme civilisés au même titre que les autres nations. Cela déclenchera une série d'événements périodiques dont les décisions nous rapprocheront ou nous éloigneront du statut de §OMonstrueux§! alors que notre nation subit cette transformation. Elle peut être suspendue à tout moment."
  start_demonsterization_title:0 "Commencer la Démonstérisation"
  start_demonsterization_desc:0 "Nous allons commencer à prendre des mesures pour démonstériser notre pays aux yeux de la communauté internationale. Nous nous efforcerons d'être considérés comme des égaux dans les affaires du monde - et non comme des monstres à abattre par des aventuriers."
