--- a/3362815204/localisation/anb_music_l_french.yml
+++ b/3362815204/localisation/anb_music_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  CHANNEL_music_anbennar_music:0 "Musique d'Anbennar"
  dawn_of_an_empire:0 "L'Aube d'un Empire - Mix Original"
  in_the_wake:0 "Dans le Sillage"
