--- a/3362815204/localisation/anb_mythical_cavalry_l_french.yml
+++ b/3362815204/localisation/anb_mythical_cavalry_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  mythical_cavalry_enabler:0 "Activateur de Cavalerie Mythique"
  mythical_cavalry_enabled_tooltip:0 "Nous pourrons recruter des régiments de §YCavalerie Mythique§!\n"
 
