--- a/3362815204/localisation/anb_new_missions_l_french.yml
+++ b/3362815204/localisation/anb_new_missions_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  dostanor_eliminating_the_opposition_title:0 "Éliminer l'Opposition"
  dostanor_eliminating_the_opposition_desc:0 "Corveld a été reconstruite, mais maintenant nous devons la développer pour lui rendre sa gloire passée. La première étape est de détruire les républiques de Nathalaire et Crathánor, car elles sont des adversaires redoutables pour la ville renaissante."
 
