--- a/3362815204/localisation/anb_magic_ruler_l_french.yml
+++ b/3362815204/localisation/anb_magic_ruler_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
  cast_ruler_magic_title:0 "£icon_magic_small£ Ouvrir le Menu de la Magie du Souverain"
  cast_ruler_magic_desc:0 "Un mage puissant est capable de lancer des sorts qui peuvent influencer l'état lui-même."
 
